css/miami-yacht-collective.webflow.css
/* ... */
.blog-details-text-block {
  width: 100%;
  max-width: 100%;
}

.blog-details-social-title {
  color: var(--neutral);
  margin-bottom: 30px;
  font-size: 18px;
  font-weight: 600;
}

.blog-details-social-link {
  aspect-ratio: 1;
  background-color: var(--_neutral-color---50);
  color: var(--neutral);
  border-radius: 100%;
  flex-flow: column;
  justify-content: center;
  align-items: center;
  width: 38px;
  transition: color .5s, background-color .5s;
  display: flex;
}

.blog-details-social-link:hover {
  background-color: var(--neutral);
  color: var(--white);
}

.blog-details-social-wrap {
  grid-column-gap: 20px;
  grid-row-gap: 20px;
  flex-flow: column;
  justify-content: flex-start;
  align-items: center;
  display: flex;
}

.blog-details-social-icon {
  width: 18px;
  display: inline-block;
}

.blog-details-info-block {
  grid-column-gap: 20px;
  grid-row-gap: 20px;
  justify-content: flex-start;
  align-items: center;
  margin-bottom: 50px;
  display: flex;
}

.blog-details-author {
  grid-column-gap: 10px;
  grid-row-gap: 10px;
  justify-content: flex-start;
  align-items: center;
  display: flex;
}

.blog-details-author-image {
  border-radius: 100%;
  width: 42px;
}

.blog-details-author-name {
  color: var(--neutral);
  font-weight: 400;
}

.blog-details-divider {
  background-color: var(--_neutral-color---50);
  width: 1px;
  height: 20px;
}

.blog-details-date {
  color: var(--neutral);
  letter-spacing: .042px;
  font-size: 14px;
  font-weight: 400;
}

.blog-details-category {
  border-radius: var(--_border-radius---extra-large);
  background-color: var(--white);
  color: var(--neutral);
  letter-spacing: .042px;
  padding: 12px 18px;
  font-size: 14px;
  font-weight: 400;
  line-height: 100%;
  text-decoration: none;
  transition: color .5s, background-color .5s;
}

.blog-details-category:hover {
  background-color: var(--neutral);
  color: var(--white);
}

.blog-details-title-block {
  margin-bottom: 40px;
}

.blog-details-title {
  color: var(--neutral);
}

.blog-details-desp h5 {
  color: var(--neutral);
  margin-top: 40px;
  margin-bottom: 16px;
}

.blog-details-desp p {
  letter-spacing: .18px;
  margin-bottom: 10px;
  font-size: 18px;
  line-height: 160%;
}

.blog-details-desp h4 {
  color: var(--neutral);
  margin-top: 40px;
  margin-bottom: 16px;
}

.blog-details-blank-block {
  flex: none;
  width: 220px;
}

.blog-details-image-block {
  border-radius: var(--_border-radius---medium);
  margin-top: 30px;
  margin-bottom: 40px;
  overflow: hidden;
}

.blog-details-latest-block {
  margin-right: -40px;
  padding-top: 15px;
  overflow: hidden;
}

.blog-details-latest-title-block {
  border-bottom: 1px solid var(--_neutral-color---50);
  margin-bottom: 40px;
  margin-right: 40px;
  padding-bottom: 6px;
}

.blog-details-latest-title {
  color: var(--neutral);
}

.blog-details-slider {
  background-color: var(--transparent);
  width: 100%;
  height: auto;
}

.blog-details-mask {
  width: 33.33%;
  overflow: visible;
}

.blog-details-slide-nav {
  display: none;
}

.blog-details-arrow {
  border-radius: var(--_border-radius---extra-small);
  background-color: var(--white);
  color: var(--neutral);
  flex-flow: column;
  justify-content: center;
  align-items: center;
  width: 48px;
  height: 48px;
  margin: 0 0 auto auto;
  padding-top: 12px;
  padding-bottom: 12px;
  transition: color .5s, background-color .5s;
  display: flex;
  top: -100px;
  right: 40px;
}

.blog-details-arrow:hover {
  background-color: var(--neutral);
  color: var(--white);
}

.blog-details-arrow.left {
  right: 98px;
}

.blog-details-slide {
  margin-right: 1px;
  padding-right: 39px;
}

.home-background-video {
  width: 100%;
  height: 100%;
  padding-top: 84px;
  position: absolute;
  inset: 0%;
  overflow: hidden;
}

.home-hero-block {
  z-index: 1;
  flex-flow: row;
  justify-content: space-between;
  align-items: flex-end;
  width: 100%;
  height: 100%;
  padding-bottom: 40px;
  display: flex;
  position: relative;
}

.home-hero-text-block {
  z-index: 1;
  grid-column-gap: 40px;
  grid-row-gap: 40px;
  flex-flow: column;
  justify-content: flex-end;
  align-items: flex-start;
  width: 100%;
  max-width: 600px;
  padding-bottom: 16px;
  display: flex;
  position: relative;
}

.home-hero-video-block {
  z-index: 1;
  grid-column-gap: 10px;
  grid-row-gap: 10px;
  flex-flow: column;
  flex: none;
  display: flex;
  position: relative;
}

.home-hero-title {
  color: var(--white);
}

.home-hero-button {
  grid-column-gap: 16px;
  grid-row-gap: 16px;
  color: var(--white);
  justify-content: flex-start;
  align-items: center;
  font-weight: 400;
  text-decoration: none;
  display: flex;
}

.home-hero-button-icon {
  width: 32px;
  display: inline-block;
}

.home-hero-video {
  grid-column-gap: 0px;
  grid-row-gap: 0px;
  border-radius: var(--_border-radius---small);
  -webkit-backdrop-filter: blur(3px);
  backdrop-filter: blur(3px);
  background-color: #ffffff21;
  flex: none;
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr;
  grid-auto-columns: 1fr;
  width: 100%;
  max-width: 400px;
  padding: 20px;
  display: grid;
  position: relative;
}

.home-hero-video-wrap {
  z-index: 5;
  border-radius: var(--_border-radius---small);
  overflow: hidden;
}

.home-hero-video-text {
  grid-column-gap: 10px;
  grid-row-gap: 10px;
  flex-flow: column;
  justify-content: center;
  align-items: flex-start;
  padding: 25px 20px;
  display: flex;
}

.home-hero-section {
  position: sticky;
  top: 0;
}

.home-hero-bg-video {
  flex-flow: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.home-hero-video-button {
  flex-flow: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  display: flex;
  inset: 0%;
}
/* ... */

